# AegisNet

./: Cargo.toml  README.md
crates/aegisnet-agent/: Cargo.toml
crates/aegisnet-agent/src/: config.rs  ebpf_loader.rs  health_check.rs  lib.rs  metrics.rs
crates/aegisnet-common/: Cargo.toml
crates/aegisnet-common/src/: error.rs  lib.rs  models.rs
crates/aegisnet-common/src/models/: policy.rs  spiffe.rs
crates/aegisnet-controller/: Cargo.toml
crates/aegisnet-controller/src/: lib.rs  utils.rs
crates/aegisnet-controller/src/ai/: data_preprocessor.rs  gnn_model.rs  mod.rs  policy_optimizer.rs
crates/aegisnet-controller/src/identity/: identity_cache.rs  mod.rs  spire_client.rs
crates/aegisnet-controller/src/policy/: crd_watcher.rs  mod.rs  policy_generator.rs
crates/aegisnet-controller/src/sync/: cluster_sync.rs  mod.rs  sync_monitor.rs
crates/aegisnet-ebpf/: Cargo.toml  README.md
crates/aegisnet-ebpf/src/: auth.rs  encryption.rs  hooks.rs  lib.rs  logging.rs  maps.rs  policy.rs
deploy/helm/aegisnet/templates/: agent-daemonset.yaml  controller.yaml  rbac.yaml
docs/ADR/: 001-aya-framework-selection.md  002-gnn-policy-generation.md
docs/architecture/: sequence-diagram.md
examples/policies/: frontend-allow.wasm.txt  payment-deny.yaml
operators/aegisnet-operator/: Cargo.toml
operators/aegisnet-operator/src/: controller.rs  crd.rs  event_handler.rs  lib.rs  reconcile.rs
scripts/: load-ebpf.sh  setup-kind-clusters.sh
test/e2e/chaos/: README.md
test/e2e/chaos/network/: partition_test.yaml
test/e2e/chaos/node/: crash_test.yaml
test/e2e/multi-cloud/: README.md
test/e2e/multi-cloud/common/: utils.sh
test/e2e/multi-cloud/scenarios/: policy_sync_test.yaml
