[workspace]
members = [
    "crates/aegisnet-ebpf",
    "crates/aegisnet-controller",
    "crates/aegisnet-agent",
    "crates/aegisnet-common",
    "operators/aegisnet-operator"
]

resolver = "2"

[workspace.package]
authors = ["AegisNet Team"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/username/aegisnet"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
kube = { version = "0.85", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19", features = ["v1_26"] }
aya = "0.12"
aya-log = "0.1"
wasmedge-sdk = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
promptheus = "0.13"
snow = "0.9"
spiffe = "0.2"