[package]
name = "aegisnet-common"
version = "0.1.0"
edition = "2021"
description = "AegisNet Common - 跨模块共享工具与数据结构"
authors = ["AegisNet Team"]

[dependencies]
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"
prost-types = "0.11"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志处理
tracing = "0.1"

# 其他工具
url = { version = "2.3", features = ["serde"] }
once_cell = "1.17"
uuid = { version = "1.3", features = ["v4", "serde"] }
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
test-log = "0.2"
mockall = "0.11"