[package]
name = "aegisnet-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
aegisnet-common = { path = "../aegisnet-common" }

[dev-dependencies]
mockall = "0.11"
rstest = "0.18"
tokio-test = "0.4"