[package]
name = "aegisnet-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes Operator for AegisNet Zero Trust Network"
authors = ["AegisNet Team"]

[dependencies]
# Kubernetes 客户端库
kube = { version = "0.78.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }

# 异步运行时
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 其他工具
clap = { version = "4.2", features = ["derive"] }
once_cell = "1.17"

# AegisNet 依赖
aegisnet-common = { path = "../../crates/aegisnet-common" }

[dev-dependencies]
test-log = "0.2"
mockall = "0.11"